TINKERPOP-2703 Build on JDK17.
Use less than 18 as 17.x.x is considered greater than 17 inclusive.
The final modifier was removed in some TinkerGraph manager fields as
these were removed during testing with reflection. However, as of Java
18 there is no reasonable way to use reflection to do this. Also, the
class is marked final which should reduce its impact.

Co-authored-by: Stephen Mallette <stepmall@amazon.com>
Co-authored-by: Cole Greer <coleg@bitquilltech.com>